--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="banner">
 
             <div>
-                <img id="calmGirl" src="image/Sport__leisure___meditating__meditation__woman__relax__yoga__practice__focus-removebg-preview.png" alt="">
+                <img id="calmGirl" src="Sport__leisure___meditating__meditation__woman__relax__yoga__practice__focus-removebg-preview.png" alt="">
             </div>
             <div class="tag">
                     <h1 style="font-family: 'Oswald', sans-serif;color:#FF577F;font-size: 100px;">Calm your choas</h1>
@@ -60,7 +60,7 @@
 
 
                 <div class="card 1">
-                  <div class="card_image"> <img src="image/644161b5ce15397473f2c4a49620ee8f.gif" /> </div>
+                  <div class="card_image"> <img src="644161b5ce15397473f2c4a49620ee8f.gif" /> </div>
                   <div class="card_title title-white">
                     <a href="meditation.html"><p>Meditation</p></a>
                  </div>
@@ -85,7 +85,7 @@
                   
                   <div class="card 4">
                   <div class="card_image">
-                    <img src="image/giphy.gif" />
+                    <img src="giphy.gif" />
                     </div>
                   <div class="card_title title-black">
                     <a href="JournalPass.html"><p>Daily Journal</p></a>
@@ -111,19 +111,19 @@
        
        <div class="profile-container" id="consult">
         <div class="profile-card">
-          <img src="image/man-character-face-avatar-glasses-260nw-562077406.webp" alt="image1" class="profile-icon" />
+          <img src="man-character-face-avatar-glasses-260nw-562077406.webp" alt="image1" class="profile-icon" />
           <div class="profile-name">Dr john</div>
           <div class="profile-position">physiatrist</div>
           <a href="#" class="button">Connect</a>
         </div>
         <div class="profile-card">
-          <img src="image/1000_F_279669366_Lk12QalYQKMczLEa4ySjhaLtx1M2u7e6.jpg" alt="image2" class="profile-icon" />
+          <img src="1000_F_279669366_Lk12QalYQKMczLEa4ySjhaLtx1M2u7e6.jpg" alt="image2" class="profile-icon" />
           <div class="profile-name">Dr Priyanka</div>
           <div class="profile-position">physiatrist</div>
           <a href="#" class="button">Connect</a>
         </div>
         <div class="profile-card">
-          <img src="image/download.jpeg" alt="image3" class="profile-icon" />
+          <img src="download.jpeg" alt="image3" class="profile-icon" />
           <div class="profile-name">Dr David</div>
           <div class="profile-position">physiatrist</div>
           <a href="#" class="button">Connect</a>
