--- a/meditation.html
+++ b/meditation.html
@@ -15,7 +15,7 @@
         <h2>What meditation is all about</h2>
           
         <video width="500" height="300" controls>
-            <source src="image/y2mate.com - What is Meditation  Buddhism In English_480p.mp4.webm" type="video/mp4">
+            <source src="y2mate.com - What is Meditation  Buddhism In English_480p.mp4.webm" type="video/mp4">
             <source src="movie.ogg" type="video/ogg">
           Your browser does not support the video tag.
           </video>
