--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                   <div class="card 2">
                   <div class="card_image">
-                    <img src="image/yoga.gif" />
+                    <img src="yoga.gif" />
                     </div>
                   <div class="card_title title-white">
                     <a href="Yoga.html"><p>Yoga</p></a>
@@ -76,7 +76,7 @@
                 
                 <div class="card 3">
                   <div class="card_image">
-                    <img src="image/icegif-209.gif" />
+                    <img src="icegif-209.gif" />
                   </div>
                   <div class="card_title">
                     <a href="musicThraphy.html"><p>Music thraphy</p></a>
