--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img id="calmGirl" src="Sport__leisure___meditating__meditation__woman__relax__yoga__practice__focus-removebg-preview.png" alt="">
             </div>
             <div class="tag">
-                    <h1 style="font-family: 'Oswald', sans-serif;color:#FF577F;font-size: 100px;">Calm your choas</h1>
+                    <h1 style="font-family: 'Oswald', sans-serif;color:#FF577F;font-size: 100px;">Mind Heaven</h1>
             </div>
             <div class="btn">
                <button class="buttonClass">Start your Meditation journey</button>
@@ -149,13 +149,12 @@
                <div class="phone details">
                  <i class="fas fa-phone-alt"></i>
                  <div class="topic">Phone</div>
-                 <div class="text-one">+0098 484544556</div>
-                 <div class="text-two">+0096 845152126</div>
+                 <div class="text-one">+91 7739824738</div>
                </div>
                <div class="email details">
                  <i class="fas fa-envelope"></i>
                  <div class="topic">Email</div>
-                 <div class="text-one">Ankit455@gmail.com</div>
+                 <div class="text-one">Sauravkumar87894@gmail.com</div>
                  
                </div>
              </div>
