--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </h2>
             <p style="text-align: center;margin: 15px;font-size: 25px;font-family: 'Poppins', sans-serif;color:#ac83cd;">Emotional and mental health is important because it’s a vital part of your life and impacts your thoughts, behaviors and emotions. Being healthy emotionally can promote productivity and effectiveness in activities like work, school or caregiving. It plays an important part in the health of your relationships, and allows you to adapt to changes in your life and cope with adversity.</p>
          </div>
-           <h2 style="text-align: center;color:#ac83cd;font-size: 40px;">Self care tips</h2>
+           <h2 style="text-align: center;color:#ac83cd;font-size: 40px;  background-color: blue;">Self care tips</h2>
           <div class="tips">
             <div class="cards-list"> 
               
