--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
       
            
-         <div class="container" id="contact">
+         <div class="container" id="contact" style="position:relative;left:100px;" >
            <div class="content">
              <div class="left-side">
                <div class="address details">
